test/functions/jplevyak/zeroarity-bound-error-2.chpl
class C {
  fun f { return 1; }
  fun g() { return 2; }
  
}

var c = C();

writeln(c.f());

